# router/router.go
@@ -14,22 +14,21 @@ func init() {
 		service.Middleware.CustomView,
 	)
 	s.Group("/", func(group *ghttp.RouterGroup) {
-		group.ALL("/", api.Index)                        // 首页
-		group.ALL("/login", api.Login)                   // 登录
-		group.ALL("/category", api.Category)             // 栏目
-		group.ALL("/content", api.Content)               // 内容
-		group.ALL("/topic", api.Topic)                   // 主题
-		group.ALL("/topic/:id", api.Topic.Detail)        // 主题 - 详情
-		group.ALL("/ask", api.Ask)                       // 问答
-		group.ALL("/ask/:id", api.Ask.Detail)            // 问答 - 详情
-		group.ALL("/article", api.Article)               // 文章
-		group.ALL("/article/:id", api.Article.Detail)    // 文章 - 详情
-		group.ALL("/reply", api.Reply)                   // 回复
-		group.ALL("/user", api.User)                     // 用户
-		group.ALL("/user/:id", api.User.Index)           // 用户 - 主页
-		group.ALL("/file", api.File)                     // 文件
-		group.ALL("/captcha", api.Captcha.Get)           // 文件
-		group.ALL("/captcha/verify", api.Captcha.Verify) // 文件
+		group.ALL("/", api.Index)                     // 首页
+		group.ALL("/login", api.Login)                // 登录
+		group.ALL("/category", api.Category)          // 栏目
+		group.ALL("/content", api.Content)            // 内容
+		group.ALL("/topic", api.Topic)                // 主题
+		group.ALL("/topic/:id", api.Topic.Detail)     // 主题 - 详情
+		group.ALL("/ask", api.Ask)                    // 问答
+		group.ALL("/ask/:id", api.Ask.Detail)         // 问答 - 详情
+		group.ALL("/article", api.Article)            // 文章
+		group.ALL("/article/:id", api.Article.Detail) // 文章 - 详情
+		group.ALL("/reply", api.Reply)                // 回复
+		group.ALL("/user", api.User)                  // 用户
+		group.ALL("/user/:id", api.User.Index)        // 用户 - 主页
+		group.ALL("/file", api.File)                  // 文件
+		group.ALL("/captcha", api.Captcha)            // 验证码
 	})
 
 	// 错误页面
